# shazam

./: .gitignore  alembic.ini  pyproject.toml  taskfile.yaml
.claude/: settings.local.json
etc/: .env.example  config.txt  docker-compose.yaml
etc/X11/: 90-dsi-rotate.conf
etc/docker/: daemon.json
etc/lightdm/: 10-shazam.conf
etc/nginx/: hosts.conf
etc/systemd/: calvin-api.service  calvin-daily.service  calvin-daily.timer  shazam-daemon.service  shazam-xhost.service
img/: apps  first_boot.sh  history  make_image.sh  setup.sh  wifi.nmconnection.example
share/: docker-compose.build.yaml  shazam.Dockerfile
src/alembic/: env.py
src/alembic/versions/: 0001_init.py
src/shazam/: record.py  test.py
src/shazam/daemon/: __main__.py  lib.py  recognition.py  song_lookup.py  worker.py
src/shazam/daemon/ui/: lib.py  screen.py  song_details.py  text_section.py
src/shazam/lib/: config.py  db.py
src/shazam/share/: foo.json
